# metapiston

./: .gitignore  LICENSE  README.md  metapiston.code-workspace  pyproject.toml
src/metapiston/minecraft/: __init__.py  _model.py  urls.py
src/metapiston/minecraft/clients/: client_v1.py
src/metapiston/minecraft/version_manifests/: version_manifest_v1.py  version_manifest_v2.py
tests/: test_client.py  test_manifest.py
